--- a/TestBench/TestBench.csproj
+++ b/TestBench/TestBench.csproj
@@ -32,20 +32,19 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="0Harmony">
-      <HintPath>D:\SteamLibrary\steamapps\common\WarmSnow\BepInEx\core\0Harmony.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>D:\Program Files\Steam\steamapps\common\WarmSnow\BepInEx\core\0Harmony.dll</HintPath>
     </Reference>
     <Reference Include="Assembly-CSharp">
-      <HintPath>D:\SteamLibrary\steamapps\common\WarmSnow\WarmSnow_Data\Managed\Assembly-CSharp.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>D:\Program Files\Steam\steamapps\common\WarmSnow\WarmSnow_Data\Managed\Assembly-CSharp.dll</HintPath>
     </Reference>
     <Reference Include="BepInEx.Core">
-      <HintPath>D:\SteamLibrary\steamapps\common\WarmSnow\BepInEx\core\BepInEx.Core.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>D:\Program Files\Steam\steamapps\common\WarmSnow\BepInEx\core\BepInEx.Core.dll</HintPath>
     </Reference>
     <Reference Include="BepInEx.Unity">
-      <HintPath>D:\SteamLibrary\steamapps\common\WarmSnow\BepInEx\core\BepInEx.Unity.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>D:\Program Files\Steam\steamapps\common\WarmSnow\BepInEx\core\BepInEx.Unity.dll</HintPath>
+    </Reference>
+    <Reference Include="ExtraDifficulty">
+      <HintPath>D:\Program Files\Steam\steamapps\common\WarmSnow\BepInEx\plugins\ExtraDifficulty.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -56,28 +55,31 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="UnityEngine">
-      <HintPath>D:\SteamLibrary\steamapps\common\WarmSnow\WarmSnow_Data\Managed\UnityEngine.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>D:\Program Files\Steam\steamapps\common\WarmSnow\WarmSnow_Data\Managed\UnityEngine.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine.AssetBundleModule">
+      <HintPath>D:\Program Files\Steam\steamapps\common\WarmSnow\WarmSnow_Data\Managed\UnityEngine.AssetBundleModule.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.CoreModule">
-      <HintPath>D:\SteamLibrary\steamapps\common\WarmSnow\WarmSnow_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>D:\Program Files\Steam\steamapps\common\WarmSnow\WarmSnow_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.IMGUIModule">
-      <HintPath>D:\SteamLibrary\steamapps\common\WarmSnow\WarmSnow_Data\Managed\UnityEngine.IMGUIModule.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>D:\Program Files\Steam\steamapps\common\WarmSnow\WarmSnow_Data\Managed\UnityEngine.IMGUIModule.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.InputLegacyModule">
-      <HintPath>D:\SteamLibrary\steamapps\common\WarmSnow\WarmSnow_Data\Managed\UnityEngine.InputLegacyModule.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>D:\Program Files\Steam\steamapps\common\WarmSnow\WarmSnow_Data\Managed\UnityEngine.InputLegacyModule.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine.TextCoreModule">
+      <HintPath>D:\Program Files\Steam\steamapps\common\WarmSnow\WarmSnow_Data\Managed\UnityEngine.TextCoreModule.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.TextRenderingModule">
-      <HintPath>D:\SteamLibrary\steamapps\common\WarmSnow\WarmSnow_Data\Managed\UnityEngine.TextRenderingModule.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>D:\Program Files\Steam\steamapps\common\WarmSnow\WarmSnow_Data\Managed\UnityEngine.TextRenderingModule.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine.UI">
+      <HintPath>D:\Program Files\Steam\steamapps\common\WarmSnow\WarmSnow_Data\Managed\UnityEngine.UI.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.UIModule">
-      <HintPath>D:\SteamLibrary\steamapps\common\WarmSnow\WarmSnow_Data\Managed\UnityEngine.UIModule.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>D:\Program Files\Steam\steamapps\common\WarmSnow\WarmSnow_Data\Managed\UnityEngine.UIModule.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
