更改生成位置

--- a/TestBench/TestBench.csproj
+++ b/TestBench/TestBench.csproj
@@ -17,7 +17,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>D:\SteamLibrary\steamapps\common\WarmSnow\BepInEx\plugins\</OutputPath>
+    <OutputPath>D:\Program Files\Steam\steamapps\common\WarmSnow\BepInEx\plugins\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
